style: fix text align in Statement.module

--- a/components/Statement/Statement.module.css
+++ b/components/Statement/Statement.module.css
@@ -5,4 +5,5 @@
 .text {
   font-size: 1.8rem;
   font-weight: 700;
+  text-align: center;
 }
